# scion

./: .gitignore  HACKING.markdown  LICENSE  Makefile  README.markdown  config.mk.sample  index.html  scion-server.cabal  scion.cabal  testall.sh
docs/: Architecture.markdown  LICENSE  RELEASE.0.1.txt  library.md
emacs/: scion.el
examples/: CallGraph0.hs  GetImports.hs  ThingAtPoint.hs  WriteDotGraph.hs
lib/: Scion.hs  scion.cabal
lib/Scion/: Backend.hs  Cabal.hs  Configure.hs  Ghc.hs  Inspect.hs  Session.hs  Types.hs  Utils.hs
lib/Scion/Inspect/: DefinitionSite.hs  Find.hs  PackageDB.hs
lib/Scion/Types/: Notes.hs  Outline.hs
lib/Test/: Utils.hs
lib/Test/GHC/: Gen.hs
server/: Main.hs  Proxy.hs  Worker.hs  scion-server.cabal
server/Scion/: Server.hs
server/Scion/Server/: Commands.hs  Commands2.hs  ConnectionIO.hs  Emacs.hs  Generic.hs  Message.hs  Options.hs  Protocol.hs  Worker.hs
server/Scion/Server/Message/: Parse.hs
server/Scion/Server/Protocol/: Vim.hs
simple-cabal-file/: README  scion-server.cabal
src/: Main.hs  Scion.hs  Server.hs
src-execs/: ProtocolJSON.hs  Server.hs  ServerTypes.hs  Worker.hs
src/Scion/: Cabal.hs  Configure.hs  Ghc.hs  Inspect.hs  Session.hs  Types.hs  Utils.hs
src/Scion/Completion/: Fuzzy.hs
src/Scion/Inspect/: DefinitionSite.hs  Find.hs  TypeOf.hs
src/Scion/Server/: Commands.hs  Emacs.hs  Protocol.hs
src/Scion/Types/: Commands.hs  Compiler.hs  Core.hs  ExtraInstances.hs  Monad.hs  Note.hs  Notes.hs  Session.hs  Worker.hs
src/Scion/Utils/: Convert.hs  IO.hs
src/Scion/Worker/: Commands.hs  Main.hs
src/Test/GHC/: Gen.hs
test/: TestSuite.hs
tests/: RunTests.hs  Test001.hs
tests/projects/: file001.hs
tests/projects/hello/: LICENSE
tests/update-err-msg/: Main.hs  Makefile  expected.stdout
vim_runtime_path/: README
vim_runtime_path/autoload/: haskellcomplete.vim  json.vim
vim_runtime_path/ftplugin/: haskell.vim
vim_runtime_path/plugin/: haskell_scion.vim
vim_test/: vim_scion_test_project.cabal
vim_test/src/: Test.hs
