name:            scion
version:         0.1
license:         BSD3
license-file:    LICENSE
author:          Thomas Schilling <nominolo@googlemail.com>
maintainer:      Thomas Schilling <nominolo@googlemail.com>
homepage:        http://github.com/nominolo/scion
description:     Haskell Source Code Inspection and Interaction blah
synopsis:        Haskell IDE library
category:        Development
stability:       provisional
build-type:      Simple
cabal-version:   >= 1.4
-- tested-with:     GHC ==6.10.1
extra-source-files: README.markdown emacs/scion.el

flag testing
  description: Enable Debugging things like QuickCheck properties, etc.
  default: False

flag emacs
  description: Build emacs-specific parts
  default: True

flag examples
  description: Build examples
  default: False

library
  build-depends:   ghc          >= 6.10 && < 6.12,
                   ghc-paths    == 0.1.*,
                   ghc-syb      == 0.1.*,
                   base         == 4.*,
                   containers   == 0.2.*,
                   directory    == 1.0.*,
                   Cabal        >= 1.5 && < 1.8,
                   uniplate     == 1.2.*,
                   time         == 1.1.*,
                   filepath     == 1.1.*
  hs-source-dirs:  src
  extensions:      CPP, PatternGuards
  exposed-modules:
                   Scion.Types,
                   Scion.Types.ExtraInstances,
                   Scion.Inspect,
                   Scion.Inspect.Find,
                   Scion.Utils,
                   Scion.Session,
                   Scion.Configure,
                   Scion
  if flag(testing)
    build-depends: QuickCheck == 2.*
    cpp-options:   -DDEBUG

  if impl(ghc > 6.11)
    cpp-options:   -DHAVE_PACKAGE_DB_MODULES

  -- TODO: drop after 6.10.2 is out
  if impl(ghc >= 6.11.20081113) || impl(ghc == 6.10.* && >= 6.10.2)
    cpp-options:   -DRECOMPILE_BUG_FIXED

  if impl(ghc == 6.10.*)
    cpp-options:   -DWPINLINE

  if flag(emacs)
    build-depends: network >= 2.1 && < 2.3,
                   network-bytestring == 0.1.*,
                   bytestring == 0.9.*
    exposed-modules: Scion.Server.Emacs,
                     Scion.Server.Commands,
                     Scion.Server.Protocol
  ghc-options:  -Wall

executable test_get_imports
  if !flag(examples)
    buildable: False
  main-is:       GetImports.hs
  hs-source-dirs: examples
                  src
  other-modules: Scion
  if flag(testing)
    build-depends: QuickCheck == 2.*
    cpp-options:   -DDEBUG

executable test_call_graph
  if !flag(examples)
    buildable: False
  main-is:       CallGraph0.hs
  hs-source-dirs: examples
                  src
  other-modules: Scion
  if flag(testing)
    build-depends: QuickCheck == 2.*
    cpp-options:   -DDEBUG

executable test_thing_at_point
  if !flag(examples)
    buildable: False
  main-is:       ThingAtPoint.hs
  hs-source-dirs: examples
                  src
  other-modules: Scion
  if flag(testing)
    build-depends: QuickCheck == 2.*
    cpp-options:   -DDEBUG

executable scion_emacs
  main-is: EmacsServer.hs
  hs-source-dirs: programs src
  if !flag(emacs)
    buildable: False
  other-modules: Scion.Server.Emacs
  if flag(testing)
    build-depends: QuickCheck == 2.*
    cpp-options:   -DDEBUG
  if impl(ghc > 6.11)
    cpp-options:   -DHAVE_PACKAGE_DB_MODULES

  -- TODO: drop after 6.10.2 is out
  if impl(ghc >= 6.11.20081113) || impl(ghc == 6.10.* && >= 6.10.2)
    cpp-options:   -DRECOMPILE_BUG_FIXED