name:            scion
version:         0.1
license:         BSD3
license-file:    ../LICENSE
author:          Thomas Schilling <nominolo@googlemail.com>
maintainer:      Thomas Schilling <nominolo@googlemail.com>
homepage:        http://github.com/nominolo/scion
description:     Haskell Source Code Inspection and Interaction library
synopsis:        Haskell IDE library
category:        Development
stability:       provisional
build-type:      Simple
cabal-version:   >= 1.4

flag testing
  description: Enable Debugging things like QuickCheck properties, etc.
  default: False

library
  -- !! also update ../simple-cabal-file/scion-server.cabal
  build-depends:   ghc          >= 6.10 && < 6.12,
                   ghc-paths    == 0.1.*,
                   ghc-syb      == 0.1.*,
                   base         == 4.*,
                   containers   == 0.2.*,
                   directory    == 1.0.*,
                   Cabal        >= 1.5 && < 1.8,
                   uniplate     == 1.2.*,
                   time         == 1.1.*,
                   filepath     == 1.1.*,
                   multiset     == 0.1.*
  hs-source-dirs:  .
  extensions:      CPP, PatternGuards
  exposed-modules:
                   Scion.Types,
                   Scion.Types.ExtraInstances,
                   Scion.Types.Notes,
                   Scion.Inspect,
                   Scion.Inspect.Find,
                   Scion.Inspect.TypeOf,
                   Scion.Inspect.DefinitionSite,
                   Scion.Utils,
                   Scion.Session,
                   Scion.Configure,
                   Scion
  if flag(testing)
    build-depends: QuickCheck == 2.*
    cpp-options:   -DDEBUG

  if impl(ghc > 6.11)
    cpp-options:   -DHAVE_PACKAGE_DB_MODULES

  -- TODO: drop after 6.10.2 is out
  if impl(ghc >= 6.11.20081113) || impl(ghc == 6.10.* && >= 6.10.2)
    cpp-options:   -DRECOMPILE_BUG_FIXED

  if impl(ghc == 6.10.*)
    cpp-options:   -DWPINLINE

  ghc-options:  -Wall

