name:            scion-server
version:         0.1
license:         BSD3
license-file:    ../LICENSE
author:          Thomas Schilling <nominolo@googlemail.com>
maintainer:      Thomas Schilling <nominolo@googlemail.com>
homepage:        http://github.com/nominolo/scion
description:     Haskell Source Code Inspection and Interaction library
synopsis:        Haskell IDE library
category:        Development
stability:       provisional
build-type:      Simple
cabal-version:   >= 1.4
extra-source-files: README.markdown ../emacs/scion.el

executable scion_server
  main-is: Main.hs

  -- !! also update ../server/scion-server.cabal and ../lib/scion.cabal
  build-depends: base         == 4.*,
                 network      >= 2.1 && < 2.3,
                 network-bytestring == 0.1.*,
                 containers   == 0.2.*,
                 bytestring   == 0.9.*,
                 utf8-string  == 0.3.*,
                 ghc          >= 6.10 && < 6.12,
                 ghc-syb      == 0.1.*,
                 Cabal        >= 1.5 && < 1.8,
                 multiset     == 0.1.*,
                 hslogger     == 1.0.*,
                 parsec       >= 2 && < 4,
                 time         == 1.1.*,
                 json         == 0.4.*,
                 ghc          >= 6.10 && < 6.12,
                 ghc-paths    == 0.1.*,
                 filepath     == 1.1.*,
                 directory    == 1.0.*,
                 uniplate     == 1.2.*
                 
  ghc-options: -Wall

  hs-source-dirs: ../server ../lib
