name:            vim-scion-test-project
version:         0.1
license:         BSD3
license-file:    LICENSE
author:          Marc Weber <marco-oweber@gmx.de>
maintainer:      Marc Weber <marco-oweber@gmx.de>
homepage:        http://github.com/nominolo/scion
description:     a very simple haskell project for testing the scion vim backend
synopsis:        Haskell IDE library
category:        Development
stability:       provisional
build-type:      Simple
cabal-version:   >= 1.4
-- tested-with:     GHC ==6.10.1
extra-source-files: README.markdown emacs/scion.el

library
  build-depends:   base         == 4.*
  hs-source-dirs:  src
  extensions:      CPP
  exposed-modules:
                   Test
